--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
 
 <body>
 
-    <body style="background-color: rgb(9, 9, 9)" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"></body>
+    <body style="background-color: rgb(9, 9, 9)">
+    </body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
